Fix username form input returning null

--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -11,8 +11,8 @@
     <div class="center">
       <input
         type="text"
-        id="name"
-        name="name"
+        id="username"
+        name="username"
         placeholder="Name"
         minlength="3"
         maxlength="20"
