--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -4,7 +4,7 @@
     action=""
     method="POST"
     [formGroup]="loginForm"
-    (ngSubmit)="onSubmit()"
+    (ngSubmit)="onSubmit(loginForm.value)"
     novalidate
   >
     <div class="center">
