Add sorting functionality for to-do items

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -47,10 +47,22 @@
             <option value="2">Medium</option>
             <option value="1">Low</option>
           </select> -->
-          <select class="form-select">
+          <!-- <select class="form-select">
             <option value="1">High</option>
             <option value="2">Medium</option>
             <option value="3">Low</option>
+          </select> -->
+          <!-- <select ng-Model="selectedTag">
+            <option *ngFor="let selectedTag of tags">{{ selectedTag }}</option>
+          </select> -->
+          <select
+            formControlName="tags"
+            (change)="selectCategory($event)"
+            class="form-select"
+          >
+            <option *ngFor="let selectedTag of tags">
+              {{ selectedTag }}
+            </option>
           </select>
         </div>
         <!--PRIORITY END-->
@@ -82,11 +94,91 @@
         <thead>
           <tr>
             <th></th>
-            <th>ID</th>
-            <th>Title</th>
-            <th>Description</th>
-            <th>Tag</th>
-            <th>Due Date</th>
+            <th [appSort]="items" data-order="desc" data-name="id">
+              ID
+              <span
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-caret-down-fill"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
+                  />
+                </svg>
+              </span>
+            </th>
+            <th [appSort]="items" data-order="desc" data-name="title">
+              Title
+              <span
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-caret-down-fill"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
+                  />
+                </svg>
+              </span>
+            </th>
+            <th [appSort]="items" data-order="desc" data-name="description">
+              Description
+              <span
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-caret-down-fill"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
+                  />
+                </svg>
+              </span>
+            </th>
+            <th [appSort]="items" data-order="desc" data-name="tag">
+              Tag
+              <span
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-caret-down-fill"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
+                  />
+                </svg>
+              </span>
+            </th>
+            <th [appSort]="items" data-order="desc" data-name="dueDate">
+              Due Date
+              <span
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-caret-down-fill"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
+                  />
+                </svg>
+              </span>
+            </th>
             <th>Action</th>
           </tr>
         </thead>
